Initial celery-server implementation
 - added server start
 - added get server state
 - added coverage
